fix contact form sizing on mobile

--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -1,6 +1,6 @@
 .contact-content {
 	width: 60%;
-	min-width: 60px;
+	min-width: 500px;
 }
 
 .contact-form {
